2008-12-09  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (Test Directives): Fix formatting.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-sra.c (scalarize_use): Create another temporary with the proper
	type for signed types in the use_all && !is_output bitfield case.

2008-12-05  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline:
	2008-05-15  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi: Document support for torture tests.

2008-12-04  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline:
	2008-10-18  Jakub Jelinek  <jakub@redhat.com>
	            Janis Johnson  <janis187@us.ibm.com>

	* Makefile.in (lang_checks_parallelized, check_gcc_parallelize,
	check_p_tool, check_p_vars, check_p_subno, check_p_comma,
	check_p_subwork, check_p_numbers, check_p_subdir, check_p_subdirs):
	New variables.
	(check-subtargets, check-%-subtargets, check-parallel-%): New
	targets.
	(check-%): For test targets listed in lang_checks_parallelized
	if -j is used and RUNTESTFLAGS doesn't specify tests to execute,
	run the testing in multiple make goals, possibly parallel, and
	afterwards run dg-extract-results.sh to merge the sum and log files.

2008-12-04  Eric Botcazou  <ebotcazou@adacore.com>
            Gary Funck  <gary@intrepid.com>

	* cse.c (lookup_as_function): Delete mode frobbing code.
	(equiv_constant): Re-implement it there for SUBREGs.

2008-12-04  Eric Botcazou  <ebotcazou@adacore.com>

	* cse.c (equiv_constant): Fix pasto.

2008-12-04  Danny Smith  <dannysmith@users.sourceforge.net>

	Backport from mainline:
	2008-12-02  Danny Smith   <dannysmith@users.sourceforge.net>

        PR target/38054
	* config/i386/winnt.c (i386_pe_encode_section_info): Condition stdcall
	decoration of function RTL names here on Ada language.

2008-12-02  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline:
	2008-11-26  Janis Johnson  <janis187@us.ibm.com>

	PR testsuite/28870